css/style.css
/* ... */
.medium {
  font-family: 'PFDinTextCompProMedium', sans-serif, "Helvetica Neue", Arial, sans-serif;
  font-weight: normal;
  font-style: normal; }

.custom-select {
  background: #fff url("data:image/svg+xml;charset=utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'><polygon fill='#a5a5a5' points='2,2.7 0.5,1.2 0,1.5 2,3.5 4,1.5 3.4,1.3'/></svg>") no-repeat right 0.5rem center;
  background-size: 12px; }

.feather {
  padding: 3px; }
  .feather_custom {
    color: #a5a5a5;
    border-radius: 50%;
    border: 1px solid #a5a5a5;
    padding: 5px;
    width: 36px;
    height: 36px;
    -webkit-transition: all 0.2s;
    -o-transition: all 0.2s;
    transition: all 0.2s; }
    .feather_custom:hover {
      -webkit-filter: brightness(2);
      filter: brightness(2); }

.custom_footer__social a:nth-child(1) .custom_feather:hover {
  background-color: #1d2c4c;
  border-color: #1d2c4c; }

.custom_footer__social a:nth-child(2) .custom_feather:hover {
  background-color: #6b124f;
  background: -webkit-radial-gradient(30% 107%, circle, #c6b503 0%, #c6b503 5%, #a10f01 45%, #6b124f 60%, #0b287d 90%);
  background: -o-radial-gradient(30% 107%, circle, #c6b503 0%, #c6b503 5%, #a10f01 45%, #6b124f 60%, #0b287d 90%);
  background: radial-gradient(circle at 30% 107%, #c6b503 0%, #c6b503 5%, #a10f01 45%, #6b124f 60%, #0b287d 90%);
  border-color: #6b124f; }

.custom_footer__social a:nth-child(3) .custom_feather:hover {
  background-color: #003b5a;
  border-color: #003b5a; }

.custom_footer__social a:nth-child(4) .custom_feather:hover {
  background-color: #660c0e;
  border-color: #660c0e; }

.custom-select:focus {
  -webkit-box-shadow: none;
  box-shadow: none; }

.navbar {
  min-height: 56px;
  padding-top: 0; }
  @media (min-width: 768px) {
    .navbar {
      padding-bottom: 0;
      padding-top: .8rem; } }
  @media (max-width: 991.98px) {
    .navbar {
      padding-top: .8rem;
      padding-bottom: .8rem; } }
  .navbar-brand {
    margin-right: 15px;
    padding-top: 0.1rem;
    padding-bottom: 0;
    -ms-flex-item-align: start;
    align-self: flex-start; }
    @media (max-width: 1439.98px) {
      .navbar-brand {
        padding-top: 0;
        line-height: 1;
        -webkit-box-ordinal-group: 3;
        -ms-flex-order: 2;
        order: 2;
        position: absolute;
        left: 50%;
        -webkit-transform: translateX(-50%);
        -ms-transform: translateX(-50%);
        transform: translateX(-50%); } }
    @media (max-width: 991.98px) {
      .navbar-brand {
        -webkit-box-ordinal-group: 3;
        -ms-flex-order: 2;
        order: 2;
        line-height: 1.2; } }
    @media (max-width: 767.98px) {
      .navbar-brand {
        left: calc(50% - 32px); } }
    .navbar-brand:hover {
      -webkit-filter: drop-shadow(0px 0px 8px rgba(255, 255, 255, 0.5)) brightness(1.1);
      filter: drop-shadow(0px 0px 8px rgba(255, 255, 255, 0.5)) brightness(1.1);
      -webkit-transition: -webkit-filter 0.1s;
      transition: -webkit-filter 0.1s;
      -o-transition: filter 0.1s;
      transition: filter 0.1s;
      transition: filter 0.1s, -webkit-filter 0.1s; }
  @media (max-width: 991.98px) {
    .navbar-toggler {
      margin-right: auto; } }
  .navbar-toggler span {
    border-radius: 1px;
    color: #FFFFFF;
    display: inline-block;
    cursor: pointer;
    height: 18px;
    margin: auto;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    width: 24px; }
    .navbar-toggler span:after, .navbar-toggler span:before {
      border-radius: inherit;
      background: #fff;
      content: "";
      display: block;
      height: 2px;
      -webkit-transition: 0.5s;
      -o-transition: 0.5s;
      transition: 0.5s; }
    .navbar-toggler span:after {
      -webkit-filter: drop-shadow(0 -8px #fff);
      filter: drop-shadow(0 -8px #fff);
      -webkit-transform: translateY(14px);
      -ms-transform: translateY(14px);
      transform: translateY(14px); }
  .navbar-toggler[aria-expanded="true"] span:after {
    -webkit-filter: initial;
    filter: initial;
    -webkit-transform: translateY(6px) rotateZ(-45deg);
    -ms-transform: translateY(6px) rotate(-45deg);
    transform: translateY(6px) rotateZ(-45deg); }
  .navbar-toggler[aria-expanded="true"] span:before {
    -webkit-transform: translateY(8px) rotateZ(45deg);
    -ms-transform: translateY(8px) rotate(45deg);
    transform: translateY(8px) rotateZ(45deg); }
  .navbar .collapsing {
    opacity: 0;
    min-height: calc(100vh - 48px);
    height: calc(100vh - 40px);
    max-height: 100vh;
    padding-bottom: 50px;
    -webkit-transition: all .35s ease;
    -o-transition: all .35s ease;
    transition: all .35s ease;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column; }
  .navbar-collapse {
    -webkit-transition: all .35s ease;
    -o-transition: all .35s ease;
    transition: all .35s ease; }
    @media (min-width: 992px) and (max-width: 1439.98px) {
      .navbar-collapse {
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        -webkit-box-ordinal-group: 4;
        -ms-flex-order: 3;
        order: 3; } }
    @media (max-width: 991.98px) {
      .navbar-collapse {
        -webkit-box-ordinal-group: 5;
        -ms-flex-order: 4;
        order: 4; } }
    @media (max-width: 767.98px) {
      .navbar-collapse.show {
        -webkit-transition: all .35s ease;
        -o-transition: all .35s ease;
        transition: all .35s ease;
        min-height: calc(100vh - 48px);
        height: calc(100vh - 40px);
        max-height: 100vh;
        padding-bottom: 50px;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        opacity: 1;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -ms-flex-direction: column;
        flex-direction: column; } }
/* ... */

